Added samples' generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(LearningToExecute)
 
 set(CMAKE_BUILD_TYPE Debug)
 
+add_definitions(-std=c++11)
+
 find_path (PUGIXML_INCLUDE_DIR
            NAMES pugixml.hpp
            PATHS ${PUGIXML_HOME}/include)
@@ -26,10 +28,14 @@ find_package(OpenCV REQUIRED core)
 set(src			src/main.cpp
                         src/ConfigurationHandler.cpp
                         src/Network.cpp
-                        src/Generator.cpp)
+                        src/Generator.cpp
+                        src/VariableManager.cpp)
 set(headers             include/ConfigurationHandler.h
                         include/Network.h
-                        include/Generator.h)
+                        include/Generator.h
+                        include/ILearningStrategy.h
+                        include/BaselineStrategy.h
+                        include/VariableManager.h)
 
 add_executable(bin/learn_to_exec 	${src}
                                         ${headers})
